# maze

./: Makefile  README (2).md  README.md  TerminalRenderer.py  a_maze_ing.py  a_mazing.tar  config.txt  config_loader.py  generate_maze.py  maze.txt  maze_generator.py  maze_solver.py  pyproject.toml  requirements.txt  setup.py
maze-main/: .gitignore  Makefile  TerminalRenderer.py  a_maze_ing.py  config.txt  config_loader.py  maze_generator.py  maze_solver.py  requirements.txt  setup.py
maze-main/mazegen/: __init__.py  generator.py
mazegen/: __init__.py  generator.py
