[project]
name = "mazegen"
version = "1.0.0"
description = "An importable Maze Generator module"
authors = [
    {name = "salalawn", email = "saba.alalawneh@learner.42.tech"},
    {name = "habu-har", email = "hadeel.abu-hardan@learner.42.tech"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
exclude = ["venv", "build", "dist"]
